[package]
name = "hexasphere_organized"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
algorithms = ["pathfinding"]

[dependencies]
arrayvec = "0.7.2"
glam = "0.22.0"
pathfinding = { version = "3.0.12", optional = true }
